<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FunRun</string>
    <string name="action_settings">Settings</string>
    
    <!-- common -->
    <string name="back">Back</string>
    
    <!-- main layout -->
    <string name="time">Time</string>
    <string name="laptime">Lap time</string>
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>
    
    <string name="start">Start</string>
    <string name="lap">Lap</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    
    <!--  exit menu -->
    <string name="quit">Quit?</string>
    <string name="sure">Are you sure you want to quit this app? Your data may be lost.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="service">The new Service was Created.</string>
    <string name="service_started"> Service Started.</string>
    <string name="act"> Activity: </string>
    <string name="service_destroyed">Service Destroyed.</string>
    <string name="not_impl">Not yet implemented.</string>
    
    <!-- Menu -->
    <string name="nav_map">Map</string>
    <string name="nav_lap">Laps</string>
    <string name="nav_hist">History</string>
    
    
    

</resources>
